Fix text alignment for details title in WorkDetailsCard

--- a/src/components/WorkDetailsCard/WorkDetailsCard.scss
+++ b/src/components/WorkDetailsCard/WorkDetailsCard.scss
@@ -60,6 +60,7 @@
       justify-content: flex-start;
       font-size: 1rem;
       font-weight: 700;
+      text-align: left;
       color: $blue-2f;
     }
 
